# ChainCLI

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  NOTICE.txt  README.md
.github/workflows/: build-docs.yml  codacy-analysis.yml  heady.yml  ubuntu-clang.yml  ubuntu-gcc.yml  windows-msvc.yml
demo/: CMakeLists.txt  CliLib.hpp  CmakeLists.txt  argument_group_demo.cpp  calculator_demo.cpp  chain_cli.hpp  custom_docformatter_demo.cpp  custom_type_demo.cpp  logger_demo.cpp  main.cpp  root_command_demo.cpp  subcommand_demo.cpp
docs/: mainpage.md
docs/html/: annotated.html  annotated_dup.js  argument_8h_source.html  argument__group_8h_source.html  classcli_1_1_cli_app-members.html  classcli_1_1_cli_app.html  classcli_1_1_cli_app.js  classcli_1_1_cli_context-members.html  classcli_1_1_cli_context.html  classcli_1_1_cli_context.js  classcli_1_1_context_builder-members.html  classcli_1_1_context_builder.html  classcli_1_1_context_builder.js  classcli_1_1_invalid_argument_type_exception-members.html  classcli_1_1_invalid_argument_type_exception.html  classcli_1_1_missing_argument_exception-members.html  classcli_1_1_missing_argument_exception.html  classcli_1_1commands_1_1_argument_base-members.html  classcli_1_1commands_1_1_argument_base.html  classcli_1_1commands_1_1_argument_base.js  classcli_1_1commands_1_1_argument_group-members.html  classcli_1_1commands_1_1_argument_group.html  classcli_1_1commands_1_1_argument_group.js  classcli_1_1commands_1_1_command-members.html  classcli_1_1commands_1_1_command.html  classcli_1_1commands_1_1_command.js  classcli_1_1commands_1_1_command_not_found_exception-members.html  classcli_1_1commands_1_1_command_not_found_exception.html  classcli_1_1commands_1_1_command_not_found_exception.js  classcli_1_1commands_1_1_command_tree-members.html  classcli_1_1commands_1_1_command_tree.html  classcli_1_1commands_1_1_command_tree.js  classcli_1_1commands_1_1_exclusive_group-members.html  classcli_1_1commands_1_1_exclusive_group.html  classcli_1_1commands_1_1_exclusive_group.js  classcli_1_1commands_1_1_flag_argument-members.html  classcli_1_1commands_1_1_flag_argument.html  classcli_1_1commands_1_1_flag_argument.js  classcli_1_1commands_1_1_flagged_argument_base-members.html  classcli_1_1commands_1_1_flagged_argument_base.html  (+190 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+23 more)
docs/latex/: annotated.tex  classcli_1_1_cli_app.tex  classcli_1_1_cli_context.tex  classcli_1_1_context_builder.tex  classcli_1_1_invalid_argument_type_exception.eps  classcli_1_1_invalid_argument_type_exception.tex  classcli_1_1_missing_argument_exception.eps  classcli_1_1_missing_argument_exception.tex  cli__app_8h_source.tex  cli__config_8h_source.tex  cli__context_8h_source.tex  files.tex  hierarchy.tex  refman.tex  structcli_1_1_cli_config.tex
lib/: CMakeLists.txt  cli.cpp  cli_app.cpp  cli_app.h  cli_base.cpp  cli_base.h  cli_config.h  cli_context.cpp  cli_context.h  clibase.cpp  clibase.h  utils.cpp  utils.h
lib/commands/: CMakeLists.txt  argument.cpp  argument.h  argument_group.cpp  argument_group.h  command.cpp  command.h  command_tree.cpp  command_tree.h  flag_argument.cpp  flag_argument.h  option_argument.cpp  option_argument.h  positional_argument.cpp  positional_argument.h
lib/commands/docwriting/: CMakeLists.txt  docformatter.cpp  docformatter.h  docwriting.cpp  docwriting.h
lib/logging/: CMakeLists.txt  formatter.cpp  formatter.h  handler.cpp  handler.h  logger.cpp  logger.h  loglevel.h  logrecord.h  logstyle.h
lib/parsing/: CMakeLists.txt  parse_exception.h  parser.cpp  parser.h  parser_utils.h
src/: CMakeLists.txt
src/chaincli/: CMakeLists.txt  cli_app.cpp  cli_app.h  cli_config.h  cli_context.cpp  cli_context.h  context_builder.cpp  context_builder.h  context_exception.cpp  context_exception.h
src/chaincli/commands/: argument.h  argument_group.cpp  command.cpp  command_tree.cpp  flag_argument.cpp  option_argument.cpp  option_argument.h  positional_argument.cpp
src/chaincli/commands/docwriting/: CMakeLists.txt  docformatter.cpp  docformatter.h  docs_exception.h  docwriting.cpp  docwriting.h
src/chaincli/logging/: CMakeLists.txt  formatter.cpp  handler.cpp  handler.h  log_streambuffer.cpp  log_streambuffer.h  logger.cpp  logger.h  loglevel.h  logstyle.h
src/chaincli/parsing/: parse_exception.h  parser.cpp  parser.h  parser_utils.h
test/: CMakeLists.txt  test.cpp
test/integration/: CMakeLists.txt
test/integration/logging/: CMakeLists.txt  handler_tests.cpp
test/unit/: CMakeLists.txt
test/unit/sociable/logging/: CMakeLists.txt  handler_tests.cpp  logger_tests.cpp
test/unit/solitary/logging/: CMakeLists.txt  formatter_tests.cpp  handler_tests.cpp  logger_tests.cpp  mocks.h
tools/: CMakeLists.txt  copyright_headers.txt  run_heady.ps1  tools.ps1
tools/heady/: CMakeLists.txt  Heady.cpp  Heady.h  LICENSE.txt  Main.cpp  chain_cli.hpp  clara.hpp  heady.cpp  heady.h  heady_params.h  include_guards.cpp  include_guards.h  license_headers.cpp  license_headers.h  main.cpp  utils.h
