target_sources(${LIBRARY_NAME_STATIC}
    PUBLIC
        command.h
        command.cpp
        argument.h
        positional_argument.h
        positional_argument.cpp
        option_argument.h
        option_argument.cpp
        flag_argument.h
        flag_argument.cpp
        command_tree.h
        command_tree.cpp
        argument_group.h
        argument_group.cpp
)

target_sources(${LIBRARY_NAME_SHARED}
    PUBLIC
        command.h
        command.cpp
        argument.h
        positional_argument.h
        positional_argument.cpp
        option_argument.h
        option_argument.cpp
        flag_argument.h
        flag_argument.cpp
        command_tree.h
        command_tree.cpp
        argument_group.h
        argument_group.cpp
)

add_subdirectory(docwriting)